# crunchtronics-tutor

./: .gitignore  CLAUDE.md  README.md  curriculum.md
knowledge/: INDEX.md
knowledge/ableton/: companion-mode.md  drum-rack-basics.md  midi-vs-audio-tracks.md  (+4 more)
reference/: INDEX.md  ONLINE.md
scripts/: README.md  enrich.py  fill_misses_via_browser.py  profile_stats.py  pyproject.toml  teardown.py
scripts/enrich/: __init__.py  camelot.py  cli.py  csv_writer.py  getsongbpm.py  models.py  playlists_loader.py  reccobeats.py
scripts/profile/: aggregator.py  reader.py
scripts/teardown/: analyze.py  cli.py  csv_context.py  envelope.py  key.py  models.py  plot.py  slug.py  ytdlp.py
scripts/tests/: conftest.py  test_camelot.py  test_cli.py  test_csv_writer.py  test_getsongbpm.py  test_models.py  test_playlists_loader.py  test_profile_aggregator.py  test_profile_reader.py  test_reccobeats.py  test_teardown_analyze.py  test_teardown_centroid.py  test_teardown_check_deps.py  test_teardown_cli_args.py  test_teardown_csv_context.py  test_teardown_e2e.py  test_teardown_envelope.py  test_teardown_hpss.py  test_teardown_idempotency.py  test_teardown_key.py  test_teardown_onset_density.py  test_teardown_per_band.py  test_teardown_plot.py  test_teardown_sidechain.py  test_teardown_slug.py  test_teardown_ytdlp.py
scripts/tests/fixtures/: getsongbpm-search-empty.json  getsongbpm-search-hit.json  playlists-mini.json  reccobeats-resolve-hit.json  reccobeats-track-404.json  reccobeats-track-hit.json
taste/: .playlist-selection.json  playlists.json  profile.md  tracks.csv
(+52 files in other folders)
