[project]
name = "crunchtronics-tutor-scripts"
version = "0.1.0"
description = "Local CLI tools for the Crunchtronics Tutor project."
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "python-dateutil>=2.9",
    "librosa>=0.10.2",
    "yt-dlp>=2024.1.0",
    "matplotlib>=3.8",
    "soundfile>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["enrich", "profile", "teardown"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
